--- a/web/css.css
+++ b/web/css.css
@@ -144,11 +144,97 @@ button:active{
 }
 
 .unCorrected{
-    border-bottom: 1px solid black;
-    border-top: 1px solid black;
-    float: none;
-    border-color: black;
-    border-width: 1px;
-    margin: 20px;
-    border-radius: 1px;
+    width: 400px;
+border-radius: 5px 5px 5px 5px;
+-moz-border-radius: 5px 5px 5px 5px;
+-webkit-border-radius: 5px 5px 5px 5px;
+border: 1px double #000000;
+padding: 20px;
+-webkit-box-shadow: -5px 4px 3px -3px rgba(0,0,0,0.52);
+-moz-box-shadow: -5px 4px 3px -3px rgba(0,0,0,0.52);
+box-shadow: -5px 4px 3px -3px rgba(0,0,0,0.52);
 }
+
+.unCorrected + .unCorrected{
+ margin-top: 10px;   
+}
+
+#grading{
+padding: 20px;
+   border-radius: 10px 10px 10px 10px;
+-moz-border-radius: 10px 10px 10px 10px;
+-webkit-border-radius: 10px 10px 10px 10px;
+border: 1px solid #000000;
+margin-top: 100px;
+text-align: left;
+display: inline-block;
+float: top;
+}
+
+#gradingPersonal{
+    
+   float: left;
+   margin: 20px;
+}
+
+#gradingComments{
+    padding-top:  20px;
+}
+
+input[name=txtPoints1]{
+    width: 30px;
+}
+input[name=txtPoints2]{
+    width: 30px;
+}
+input[name=txtComment]{
+    
+}
+input[name=btnGrade]{
+    float: right;
+   -moz-box-shadow: 0px 10px 7px -11px #276873;
+	-webkit-box-shadow: 0px 10px 7px -11px #276873;
+	box-shadow: 0px 10px 7px -11px #276873;
+	background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #599bb3), color-stop(1, #7b999e));
+	background:-moz-linear-gradient(top, #599bb3 5%, #7b999e 100%);
+	background:-webkit-linear-gradient(top, #599bb3 5%, #7b999e 100%);
+	background:-o-linear-gradient(top, #599bb3 5%, #7b999e 100%);
+	background:-ms-linear-gradient(top, #599bb3 5%, #7b999e 100%);
+	background:linear-gradient(to bottom, #599bb3 5%, #7b999e 100%);
+	filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#599bb3', endColorstr='#7b999e',GradientType=0);
+	background-color:#599bb3;
+	-moz-border-radius:4px;
+	-webkit-border-radius:4px;
+	border-radius:4px;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:20px;
+	font-weight:bold;
+	padding:6px 32px;
+	text-decoration:none;
+	text-shadow:0px 2px 0px #3d768a;
+}
+
+#gradingGoal{
+padding: 10px;
+   border-radius: 10px 10px 10px 10px;
+-moz-border-radius: 10px 10px 10px 10px;
+-webkit-border-radius: 10px 10px 10px 10px;
+border: 1px solid #000000;
+margin-top: 10px;
+text-align: left;
+display: inline-block;
+float: top;}
+
+#gradingAnswer{
+padding: 10px;
+   border-radius: 10px 10px 10px 10px;
+-moz-border-radius: 10px 10px 10px 10px;
+-webkit-border-radius: 10px 10px 10px 10px;
+border: 1px solid #000000;
+margin-top: 1px;
+text-align: left;
+display: inline-block;
+float: top;}
