--- a/web/css.css
+++ b/web/css.css
@@ -21,6 +21,12 @@ body{
     margin-right: auto;
 }
 
+h5{
+    font-size: 9px;
+    font-weight: lighter;
+    margin: 0;
+}
+
 #sideMenu{
    left: 0;
    height: 100px;
@@ -28,6 +34,85 @@ body{
    background-color: rgb(119,136,153);
    position: fixed;
    text-align: center;
+}
+
+.partedDiv.memberList, .memberTable, .partedDiv.progress{
+    width: 950px;
+}
+
+.partedDiv.progress, .progressTable, .partedDiv.profile{
+    width: 800px;
+}
+.memberTable tbody tr:nth-child(even){
+    background-color: #EEEEEE;
+}
+
+.memberTable tbody tr:nth-child(odd){
+    background-color: white;
+}
+
+.progressTable tbody tr:nth-child(even){
+    background-color: white;
+}
+
+.progressTable tbody tr:nth-child(odd){
+    background-color: #eeeeee;
+}
+
+.progressTable th{
+    text-align: left;
+}
+
+.moduleCol.prog, .moduleCol.progTitle{
+    width: 300px;
+    text-align: left;
+}
+
+.moduleCol.progTitle{
+    border-bottom: 1px solid black;
+}
+
+.deliveredCol prog, .correctedCol prog{
+    width: 200px;
+    text-align: left;
+}
+
+.pointsCol prog, .maxPointsCol prog{
+    width: 100px;
+}
+
+.pointsCol prog{
+    text-align: right;
+}
+
+.buttonCol prog{
+    width: 65px;
+}
+
+.memberTable th{
+    text-align: left;
+    background-color: white;
+    border-bottom: 1px solid black;
+}
+
+.memberTable th:first-child, .memberNameCol{
+    width: 500px;
+}
+
+.removeMemberCol, .addMemberCol, .assistantMemberCol, .unAssistantCol{
+    background-color: white;
+}
+
+.memberNameCol{
+    width: 700px;
+}
+
+.memberRoleCol{
+    width: 200px;
+}
+
+.partedDiv.profile{
+    height: auto;
 }
 
 .modulesTable tbody tr:nth-child(odd) {
@@ -83,6 +168,7 @@ button:active{
 }
 
 #btnAnnouncement{
+    background-image: url("https://i.imgur.com/8RS0j9M.png");
     left: 700px;
 }
 
@@ -119,32 +205,37 @@ button:active{
 }
 
 .buttonCol{
-    width: 75px;
+    width: 55px;
     text-align: center;
     float: left;
 }
 
 .buttonCol.title{
+    width: 75px;
+    float: left;
     border-bottom: 1px solid black;
-    color: whitesmoke;
+    color: white;
 }
 .moduleCol{
-        width: 300px;
-        text-align: left;
-        float:left;
+    width: 300px;
+    text-align: left;
+    float:left;
 }
 
 .moduleCol.title{
+    width: 300px;
     border-bottom: 1px solid black;
 }
 
 .deadlineCol{
     width: 150px;
     float: left;
-    text-align: center;
+    text-align: left;
 }
 
 .deadlineCol.title{
+    text-align: left;
+    width: 150px;
     border-bottom: 1px solid black;
 }
 
@@ -154,8 +245,17 @@ button:active{
     text-align: center;
 }
 
-.deliveredCol.title{
+.deliveredCol.prog{
+    text-align:left;
+}
+
+.deliveredCol.title, .totalCol.title, .evaluatedCol.title, .correctedCol.title, .pointsCol.title, .maxPointsCol.title{
+    width: 100px;
     border-bottom: 1px solid black;
+}
+
+.pointsCol, .pointsCol.title{
+    text-align: right;
 }
 
 .totalCol{
@@ -164,21 +264,22 @@ button:active{
     text-align: center;
 }
 
-.totalCol.title{
-    border-bottom: 1px solid black;
-}
-
 .evaluatedCol{
     width: 100px;
     float: left;
     text-align: center;
 }
 
-.evaluatedCol.title{
+.editbtnCol, .deleteBtnCol{
+    float: left;
+    text-align: center;
+}
+
+.editBtnCol.title, .deleteBtnCol.title{
     border-bottom: 1px solid black;
 }
 
-.unCorrected, .welcomeDiv, .courseGoalDiv, .announcementDiv{
+.partedDiv, .unCorrected{
     background-color: white;
     margin: 15px;
     width: 750px;
@@ -192,8 +293,25 @@ button:active{
     box-shadow: -5px 4px 3px -3px rgba(0,0,0,0.52);
 }
 
+.partedDiv.moduleMenu{
+    width: 950px;
+}
+
+.outboxDiv, .inboxDiv{
+    width: 850px;
+    max-height: 500px;
+    overflow-y: scroll;
+}
+
 .announcementDiv{
-    overflow: scroll;
+    margin-top: 10px;
+    width: 850px;
+    max-height: 600px;
+    overflow-y: scroll;
+}
+
+.tableClassAnnouncement tbody tr:nth-child(even){
+   background-color: #EEEEEE;
 }
 
 .unCorrected + .unCorrected{
